<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddWordActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="top"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        >

        <TextView
            android:id="@+id/textView_player_name4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="40sp"
            android:text="@string/vocabul"
            android:textSize="30sp"
            android:textColor="@color/colorRed"
            android:textStyle="bold"
            android:gravity="center"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="40sp"
            android:orientation="horizontal"
            android:gravity="center"
            >

            <TextView
                android:id="@+id/textView_player_name5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Количество слов в словаре: "
                android:textColor="@color/colorBlack"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/textView6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/colorBlack"
                android:textSize="18sp"
                android:text="0" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="30sp"
            android:orientation="horizontal"
            android:gravity="center">

            <EditText
                android:id="@+id/editText_to_add_word"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/colorRed"
                android:textCursorDrawable="@color/colorRed"
                android:ems="10"
                android:inputType="textPersonName"
                android:hint="Введите слово" />

            <Button
                android:id="@+id/button_to_add_word"
                android:layout_width="40sp"
                android:layout_height="40sp"
                android:layout_marginLeft="20sp"
                android:background="@drawable/button_states"
                android:text="+" />

        </LinearLayout>

        <Button
            android:id="@+id/button_continue_to_start"
            android:layout_width="300sp"
            android:layout_height="wrap_content"
            android:layout_marginTop="50sp"
            android:background="@drawable/button_states"
            android:text="Продолжить"
            tools:ignore="OnClick"
            android:layout_gravity="center"/>

    </LinearLayout>

</android.support.constraint.ConstraintLayout>