<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".PlayersNamesActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="top">

        <TextView
            android:id="@+id/textView_player_name3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="40sp"
            android:text="Имена команд"
            android:textColor="@color/colorRed"
            android:textStyle="bold"
            android:textSize="30sp"
            android:layout_gravity="center"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_gravity="center"
            android:layout_marginTop="40sp">

            <TextView
                android:id="@+id/textView3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Команда 1:"
                android:textSize="18sp"
                android:textColor="@color/colorBlack"
                android:layout_marginRight="20sp"/>

            <EditText
                android:id="@+id/textView_player_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/colorRed"
                android:textCursorDrawable="@color/colorRed"
                android:text="Зайцы"
                android:textSize="18sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_gravity="center"
            android:layout_marginTop="20sp">

            <TextView
                android:id="@+id/textView4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Команда 2:"
                android:textSize="18sp"
                android:textColor="@color/colorBlack"
                android:layout_marginRight="20sp"/>

            <EditText
                android:id="@+id/textView_player_name2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/colorRed"
                android:textCursorDrawable="@color/colorRed"
                android:text="Волки"
                android:textSize="18sp" />

        </LinearLayout>

        <Button
            android:id="@+id/button_to_mode"
            android:layout_width="300sp"
            android:layout_height="wrap_content"
            android:text="Продолжить"
            android:background="@drawable/button_states"
            tools:ignore="OnClick"
            android:layout_gravity="center"
            android:layout_marginTop="60sp"/>

    </LinearLayout>

</android.support.constraint.ConstraintLayout>