...
                <Space
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1" />

                <Button
                    android:id="@+id/button_new_game"
                    android:layout_width="300sp"
                    android:layout_height="wrap_content"
                    android:layout_margin="18dp"
                    android:background="@drawable/button_states"
                    android:text="Новая игра"
                    android:textSize="18sp"
...
