<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SettingsActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textView_settings"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="40sp"
            android:text="Настройки"
            android:textColor="@color/colorRed"
            android:textStyle="bold"
            android:textSize="30sp" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="40sp"
            android:layout_gravity="center"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/time_for_step"
                android:textSize="18sp"
                android:textColor="@color/colorBlack" />

            <Spinner
                android:id="@+id/spinner_time_for_step"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30sp"
            android:layout_gravity="center"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView_words_in_vocabular"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Количество слов в шляпе:"
                android:textSize="18sp"
                android:textColor="@color/colorBlack" />

            <Spinner
                android:id="@+id/spinner_words_in_vocabular"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                />

        </LinearLayout>

        <TextView
            android:id="@+id/textView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30sp"
            android:text="Уровень сложности:"
            android:layout_gravity="center"
            android:textSize="18sp"
            android:textColor="@color/colorBlack" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="10sp"
            android:orientation="vertical">

            <RadioGroup
                android:id="@+id/radio_mode"
                android:layout_width="wrap_content"
                android:layout_gravity="center"
                android:layout_height="wrap_content">

                <RadioButton
                    android:id="@+id/checkBoxEasy"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15sp"
                    android:buttonTint="@color/colorRed"
                    android:checked="true"
                    android:text="Легкий"
                    android:textSize="18sp" />

                <RadioButton
                    android:id="@+id/checkBoxNorm"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15sp"
                    android:buttonTint="@color/colorRed"
                    android:text="Средний"
                    android:textSize="18sp" />

                <RadioButton
                    android:id="@+id/checkBoxHard"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15sp"
                    android:buttonTint="@color/colorRed"
                    android:text="Сложный"
                    android:textSize="18sp" />
            </RadioGroup>

        </LinearLayout>

        <Button
            android:id="@+id/button_to_players_names"
            android:layout_width="300sp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="40sp"
            android:background="@drawable/button_states"
            android:text="Продолжить"
            tools:ignore="OnClick" />

    </LinearLayout>

</android.support.constraint.ConstraintLayout>