<resources>
    <string name="app_name">Hat</string>
    <string name="time_for_step">Количество секунд на ход:</string>
    <string name="rules">Команды ходят по очереди.
        \n
        \nХод заключается в том, что один из игроков объясняет слова сокоманднику.
        \n
        При объяснении не допускается:
        \n\t\t - использовать однокоренные слова;
        \n\t\t - называть прямые переводы объясняемого слова на иностранные языки;
        \n\t\t - указывать жестами на предметы и части тела.
        \n
        \nНа ход дается фиксированное время.
        \nПобеждает та команда, участники которой отгадали наибольшее количество слов.
    </string>
    <string name="vocabul">Добавление слов\n в словарь</string>
</resources>
